--- a/ch03/spring-boot-simple/src/main/resources/application.properties
+++ b/ch03/spring-boot-simple/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=spring-boot-simple
 spring.banner.location=classpath:/META-INF/banner.txt
+server.ip=192.168.3.5
+
+myapp.server-ip=192.168.34.56
+myapp.name=My Config App
+myapp.description=This is an example
